# prim-sync

./: .gitignore  CHANGELOG.md  README.md  prim-sync.cmd  prim-sync.py  prim-sync.sh  pyproject.toml  requirements.txt
prim_sync/: __main__.py
