[tool.poetry]
packages = [{include = "prim_sync"}]

[project]
name = "prim-sync"
version = "0.10.2"
description = "Primitive Sync - Bidirectional and unidirectional sync over SFTP. Multiplatform Python script optimized for the Primitive FTPd Android SFTP server."
license = "Apache-2.0"
authors = [
    {name = "Laszlo Magyar", email = "lmagyar1973@gmail.com"}
]
readme = "README.md"
repository = "https://github.com/lmagyar/prim-sync"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12, <4.0"
dependencies = [
    "paramiko (>=4.0.0)",
    "platformdirs (>=4.5.0)",
    "zeroconf (>=0.148.0)",
]

[project.urls]
"Change Log" = "https://github.com/lmagyar/prim-sync/blob/main/CHANGELOG.md"

[project.scripts]
prim-sync = "prim_sync.__main__:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
